fix footer on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ footer h2 {
     color: var(--text);
 }
 
-footer a {
+.footer-btn {
     padding: 5px 10px;
     font-size: 16px;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -392,7 +392,7 @@ iframe {
 
 @media screen and (max-width: 575px) {
     .push {
-        height: 150px;
+        height: 300px;
     }
 
     .static-quote {
@@ -424,17 +424,23 @@ iframe {
         justify-content: space-around;
     } */
 
-    footer a {
+    .footer-btn    {
         padding: 5px 10px;
-        font-size: 16px;
+        justify-content: center;
+        font-size: 1.5em;
         text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         background: var(--text);
-        color: var(--box);
         border-radius: 15px;
         text-shadow: none;
         border: var(--background);
         border: 2px;
-        border-style: dotted;
+        /* text-decoration: none; */
+        width: 80%;
+        margin-top: 10px; 
+    }
+
+    footer a {
+        color: var(--box);
     }
 }
 
